--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Agorazo: La visión del Padre</title>
+	<title>Agorazo</title>
 </head>
 <body>
-<h1>Hello world</h1>
+<h1>Agorazo: La visión del Padre</h1>
 </body>
 </html>
